[package]
name = "vec-map"
version = "0.1.0"
authors = ["Alexis Beingessner <a.beingessner@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A simple map based on a vector for small integer keys"
repository = "https://github.com/contain-rs/vec-map"
homepage = "https://github.com/contain-rs/vec-map"
documentation = "https://contain-rs.github.io/vec-map/vec_map"
keywords = ["data-structures", "vecmap"]
readme = "README.md"