[package]
name = "vec_map"
version = "0.8.2"
authors = ["Alex Crichton <alex@alexcrichton.com>",
           "Jorge Aparicio <japaricious@gmail.com>",
           "Alexis Beingessner <a.beingessner@gmail.com>",
           "Brian Anderson <>",
           "tbu- <>",
           "Manish Goregaokar <>",
           "Aaron Turon <aturon@mozilla.com>",
           "Adolfo Ochagavía <>",
           "Niko Matsakis <>",
           "Steven Fackler <>",
           "Chase Southwood <csouth3@illinois.edu>",
           "Eduard Burtescu <>",
           "Florian Wilkens <>",
           "Félix Raimundo <>",
           "Tibor Benke <>",
           "Markus Siemens <markus@m-siemens.de>",
           "Josh Branchaud <jbranchaud@gmail.com>",
           "Huon Wilson <dbau.pp@gmail.com>",
           "Corey Farwell <coref@rwell.org>",
           "Aaron Liblong <>",
           "Nick Cameron <nrc@ncameron.org>",
           "Patrick Walton <pcwalton@mimiga.net>",
           "Felix S Klock II <>",
           "Andrew Paseltiner <apaseltiner@gmail.com>",
           "Sean McArthur <sean.monstar@gmail.com>",
           "Vadim Petrochenkov <>"]

edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple map based on a vector for small integer keys"
repository = "https://github.com/contain-rs/vec-map"
homepage = "https://github.com/contain-rs/vec-map"
documentation = "https://docs.rs/vec-map/latest/vec_map/"
keywords = ["data-structures", "collections", "vecmap", "vec_map", "contain-rs"]
readme = "README.md"

[features]
default = ["std"]
std = ["allocator-api2/std", "serde/std"]

serde_no_std = ["serde/alloc"]
serde = ["dep:serde", "allocator-api2/serde"]
# This feature is kept for backwards compatibility. Use feature "serde" instead.
eders = [ "serde" ]

[dependencies]
allocator-api2 = { version = "0.2.20", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
